// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Style should render card 1`] = `
<div
  class="w-fit rounded-md p-8 shadow-lg m-10 bg-green-300 border-2 border-solid border-black"
  data-testid="card-test"
>
  Hello
</div>
`;

exports[`Style should render custom button 1 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-3 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 text-white w-fit bg-orange-400"
  data-testid="custom-button-test-1"
>
  Custom1
</button>
`;

exports[`Style should render custom button 2 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-3 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 text-white w-fit bg-indigo-300"
  data-testid="custom-button-test-2"
>
  Custom2
</button>
`;

exports[`Style should render default button 1 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-5/6 bg-red-300 dark:bg-red-500"
  data-testid="default-button-test-1"
>
  Cancel
</button>
`;

exports[`Style should render default button 2 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
  data-testid="default-button-test-2"
>
  Success
</button>
`;

exports[`Style should render default button 3 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-red-600"
  data-testid="default-button-test-3"
>
  Cancel
</button>
`;

exports[`Style should render default button 4 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-1/2 bg-green-500"
  data-testid="default-button-test-4"
>
  Success
</button>
`;

exports[`Style should render default button 5 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-blue-600"
  data-testid="default-button-test-5"
>
  Primary
</button>
`;

exports[`Style should render default button 6 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-3/4 bg-white dark:bg-slate-300"
  data-testid="default-button-test-6"
>
  Default
</button>
`;

exports[`Style should render default button 7 1`] = `
<button
  class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-teal-400"
  data-testid="default-button-test-7"
>
  LOGIN
</button>
`;

exports[`Style should render icon button with label 1 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white dark:text-white w-1/3 bg-teal-500 dark:bg-teal-400"
  data-testid="icon-with-label-button-test-1"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
    />
  </svg>
  Add
</button>
`;

exports[`Style should render icon button with label 2 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
  data-testid="icon-with-label-button-test-2"
>
  <svg
    class="fill-red-800 dark:fill-white"
    data-testid="close-icon-button"
    height="22"
    viewBox="0 0 320 512"
    width="22"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
    />
  </svg>
  Close
</button>
`;

exports[`Style should render icon button with label 3 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white w-fit bg-red-600"
  data-testid="icon-with-label-button-test-3"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"
    />
    <path
      d="M9 10h2v8H9zm4 0h2v8h-2z"
    />
  </svg>
  Delete
</button>
`;

exports[`Style should render icon button with label 4 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white w-1/2 bg-blue-600"
  data-testid="icon-with-label-button-test-4"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM382 896h-.2L232 746.2v-.2h150v150z"
    />
  </svg>
  Copy
</button>
`;

exports[`Style should render icon button with label 5 1`] = `
<button
  class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-black w-fit bg-white dark:bg-slate-300"
  data-testid="icon-with-label-button-test-5"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
    />
  </svg>
  Default
</button>
`;

exports[`Style should render icon button without label 1 1`] = `
<button
  class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white dark:text-white bg-teal-500 dark:bg-teal-400"
  data-testid="icon-without-label-button-test-1"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 2.013H9V9H2v6h7v6.987h6V15h7V9h-7z"
    />
  </svg>
</button>
`;

exports[`Style should render icon button without label 2 1`] = `
<button
  class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-red-800 dark:text-white bg-red-300 dark:bg-red-500"
  data-testid="icon-without-label-button-test-2"
>
  <svg
    class="fill-red-800 dark:fill-white"
    data-testid="close-icon-button"
    height="22"
    viewBox="0 0 320 512"
    width="22"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
    />
  </svg>
</button>
`;

exports[`Style should render icon button without label 3 1`] = `
<button
  class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white bg-red-600"
  data-testid="icon-without-label-button-test-3"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"
    />
    <path
      d="M9 10h2v8H9zm4 0h2v8h-2z"
    />
  </svg>
</button>
`;

exports[`Style should render icon button without label 4 1`] = `
<button
  class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white bg-blue-600"
  data-testid="icon-without-label-button-test-4"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM382 896h-.2L232 746.2v-.2h150v150z"
    />
  </svg>
</button>
`;

exports[`Style should render icon button without label 5 1`] = `
<button
  class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-black bg-white dark:bg-slate-300"
  data-testid="icon-without-label-button-test-5"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
    />
  </svg>
</button>
`;

exports[`Style should render password field 1`] = `
<input
  autocomplete="off"
  class="w-full my-2 p-2 outline-none rounded-md border-2 border-gray-300 sc-bdvvtL"
  data-testid="login-password-input"
  placeholder="password"
  value="password"
/>
`;

exports[`Style should render pill 1 1`] = `
<div
  class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-red-500 dark:text-red-700 bg-red-100 dark:bg-red-200 border-red-500"
  data-testid="pill-test-1"
>
  CANCEL
</div>
`;

exports[`Style should render pill 2 1`] = `
<div
  class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-green-500 dark:text-green-700 bg-green-100 dark:bg-green-200 border-green-500"
  data-testid="pill-test-2"
>
  SUCCESS
</div>
`;

exports[`Style should render pill 3 1`] = `
<div
  class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-yellow-500 dark:text-yellow-700 bg-yellow-100 dark:bg-yellow-200 border-yellow-500"
  data-testid="pill-test-3"
>
  WARNING
</div>
`;

exports[`Style should render pill 4 1`] = `
<div
  class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
  data-testid="pill-test-4"
>
  DEFAULT
</div>
`;

exports[`Style should render style for button, pill, card and text field 1`] = `
<div>
  <div
    class="mt-10 text-3xl mx-auto w-screen"
    data-testid="style"
  >
    <div
      class="w-full mb-20"
    >
      <div
        class="font-sans font-bold text-lg mb-10 ml-6 dark:text-gray-100"
      >
        Card
      </div>
      <div
        class="w-fit rounded-md p-8 shadow-lg m-10 bg-green-300 border-2 border-solid border-black"
        data-testid="card-test"
      >
        Hello
      </div>
    </div>
    <div
      class="w-full mb-20"
    >
      <div
        class="font-sans font-bold text-lg mb-10 ml-6 dark:text-gray-100"
      >
        Button
      </div>
      <div
        class="w-full grid grid-cols-4 gap-4 gap-y-8"
      >
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-5/6 bg-red-300 dark:bg-red-500"
          data-testid="default-button-test-1"
        >
          Cancel
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="default-button-test-2"
        >
          Success
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-red-600"
          data-testid="default-button-test-3"
        >
          Cancel
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-1/2 bg-green-500"
          data-testid="default-button-test-4"
        >
          Success
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-blue-600"
          data-testid="default-button-test-5"
        >
          Primary
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-3/4 bg-white dark:bg-slate-300"
          data-testid="default-button-test-6"
        >
          Default
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-white w-fit bg-teal-400"
          data-testid="default-button-test-7"
        >
          LOGIN
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-3 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 text-white w-fit bg-orange-400"
          data-testid="custom-button-test-1"
        >
          Custom1
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-3 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 text-white w-fit bg-indigo-300"
          data-testid="custom-button-test-2"
        >
          Custom2
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white dark:text-white w-1/3 bg-teal-500 dark:bg-teal-400"
          data-testid="icon-with-label-button-test-1"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            />
          </svg>
          Add
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="icon-with-label-button-test-2"
        >
          <svg
            class="fill-red-800 dark:fill-white"
            data-testid="close-icon-button"
            height="22"
            viewBox="0 0 320 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
            />
          </svg>
          Close
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white w-fit bg-red-600"
          data-testid="icon-with-label-button-test-3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"
            />
            <path
              d="M9 10h2v8H9zm4 0h2v8h-2z"
            />
          </svg>
          Delete
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white w-1/2 bg-blue-600"
          data-testid="icon-with-label-button-test-4"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM382 896h-.2L232 746.2v-.2h150v150z"
            />
          </svg>
          Copy
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-black w-fit bg-white dark:bg-slate-300"
          data-testid="icon-with-label-button-test-5"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
            />
          </svg>
          Default
        </button>
        <button
          class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white dark:text-white bg-teal-500 dark:bg-teal-400"
          data-testid="icon-without-label-button-test-1"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2.013H9V9H2v6h7v6.987h6V15h7V9h-7z"
            />
          </svg>
        </button>
        <button
          class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-red-800 dark:text-white bg-red-300 dark:bg-red-500"
          data-testid="icon-without-label-button-test-2"
        >
          <svg
            class="fill-red-800 dark:fill-white"
            data-testid="close-icon-button"
            height="22"
            viewBox="0 0 320 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
            />
          </svg>
        </button>
        <button
          class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white bg-red-600"
          data-testid="icon-without-label-button-test-3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"
            />
            <path
              d="M9 10h2v8H9zm4 0h2v8h-2z"
            />
          </svg>
        </button>
        <button
          class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-white bg-blue-600"
          data-testid="icon-without-label-button-test-4"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM382 896h-.2L232 746.2v-.2h150v150z"
            />
          </svg>
        </button>
        <button
          class="flex items-center gap-3 p-4 m-auto shadow-md rounded-full text-center w-fit text-lg font-semibold cursor-pointer hover:brightness-105 text-black bg-white dark:bg-slate-300"
          data-testid="icon-without-label-button-test-5"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="w-full mb-20"
    >
      <div
        class="font-sans font-bold text-lg mb-20 ml-6 dark:text-gray-100"
      >
        Pills
      </div>
      <div
        class="w-full grid grid-cols-4 gap-4 gap-y-8"
      >
        <div
          class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-red-500 dark:text-red-700 bg-red-100 dark:bg-red-200 border-red-500"
          data-testid="pill-test-1"
        >
          CANCEL
        </div>
        <div
          class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-green-500 dark:text-green-700 bg-green-100 dark:bg-green-200 border-green-500"
          data-testid="pill-test-2"
        >
          SUCCESS
        </div>
        <div
          class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-yellow-500 dark:text-yellow-700 bg-yellow-100 dark:bg-yellow-200 border-yellow-500"
          data-testid="pill-test-3"
        >
          WARNING
        </div>
        <div
          class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
          data-testid="pill-test-4"
        >
          DEFAULT
        </div>
      </div>
    </div>
    <div
      class="w-full mb-20"
    >
      <div
        class="font-sans font-bold text-lg mb-20 ml-6 dark:text-gray-100"
      >
        Text Field
      </div>
      <div
        class="w-full grid grid-cols-4 gap-4 gap-y-8 ml-20"
      >
        <input
          autocomplete="off"
          class="w-full my-2 p-2 outline-none rounded-md border-2 border-gray-300"
          data-testid="login-username-input"
          placeholder="username"
          value="username"
        />
        <input
          autocomplete="off"
          class="w-full my-2 p-2 outline-none rounded-md border-2 border-gray-300 sc-bdvvtL"
          data-testid="login-password-input"
          placeholder="password"
          value="password"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Style should render text field 1`] = `
<input
  autocomplete="off"
  class="w-full my-2 p-2 outline-none rounded-md border-2 border-gray-300"
  data-testid="login-username-input"
  placeholder="username"
  value="username"
/>
`;
